# Mental__stats

./: .gitignore  README.md
backend/app/: database.py  main.py
backend/app/api/v1/: endpoints.py
backend/app/models/: employee.py  staff_status.py
backend/app/schemas/: assessment.py  auth.py
backend/notification_service/: main.py
backend/questions_service/: main.py  questions.json
frontend/: assigment.html  index.html  login.html  login_staff.html
frontend/static/css/: style.css
frontend/static/js/: api.js  main.js
shared_lib/: LICENSE  README.md  pyproject.toml
shared_lib/src/psych_analyzer/: constants.py  engine.py
